--- a/plms/learner/templates/login.html
+++ b/plms/learner/templates/login.html
@@ -103,9 +103,16 @@ body {
   font-family: inherit;
 
 }
+
 </style>
 </head>
 <body>
+  {%for msg in messages%}
+  <div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    {{msg}}
+  </div>
+  {%endfor%}
 <form method="post" class="form-sign" action="/login">
   {% csrf_token %}
 
