--- a/plms/learner/templates/index4.html
+++ b/plms/learner/templates/index4.html
@@ -14,11 +14,12 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes">
   <style>
     body {
-      background-image: url('https://images.unsplash.com/photo-1535905557558-afc4877a26fc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
-      
-      
+      background-image: linear-gradient(rgba(54, 58, 71, 0.7), rgba(46, 47, 52, 0.7)), url('images/lib.jpg');
+
+      background-size: cover;
 
 
 
@@ -26,59 +27,61 @@
 
     .button {
       text-decoration: none;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #1ed66b;
-  border: none;
-  color: #213dd8;
-  text-align: center;
-  font-size: 15px;
-  padding: 10px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 1px;
-}
-
-.button span {
-  text-decoration: none;
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.button span:after {
-  text-decoration: none;
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button:hover span {
-  text-decoration: none;
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  text-decoration: none;
-  opacity: 1;
-  right: 0;
+      display: inline-block;
+      border-radius: 4px;
+      background-color: #1ed66b;
+      border: none;
+      color: #213dd8;
+      text-align: center;
+      font-size: 15px;
+      padding: 10px;
+      width: 200px;
+      transition: all 0.5s;
+      cursor: pointer;
+      margin: 1px;
     }
-    .card:hover{
-      text-decoration: none;
-  
-  
-  border: 2px solid black;
-  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2)  0 4px 20px 0 rgba(0,0,0,0.19);
 
-  background-color: #09b3f7;
-  box-shadow: 0px 15px 20px black;
-  
-  transform: translateY(-7px);
+    .button span {
+      text-decoration: none;
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
+    }
+
+    .button span:after {
+      text-decoration: none;
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
+    }
+
+    .button:hover span {
+      text-decoration: none;
+      padding-right: 25px;
+    }
+
+    .button:hover span:after {
+      text-decoration: none;
+      opacity: 1;
+      right: 0;
+    }
+
+    .card:hover {
+      text-decoration: none;
+
+
+      border: 2px solid rgb(131, 130, 130);
+      box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2) 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+
+      /* background-color: #09b3f7; */
+      background: url(images/Hersheys.jpg);
+      box-shadow: 0px 15px 20px black;
+
+      transform: translateY(-7px);
 
     }
 
@@ -86,154 +89,172 @@
 
 
     @import url("https://fonts.googleapis.com/css?family=Oswald:300,400,500,700");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
-.gr-1 {
-  background: linear-gradient(170deg, #01E4F8 0%, #1D3EDE 100%);
-}
+    @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+     .gr-1 {
+  /* background: linear-gradient(170deg, #01E4F8 0%, #1D3EDE 100%); */
+  
+  
+} 
 
-.gr-2 {
-  background: linear-gradient(170deg, #B4EC51 0%, #429321 100%);
-}
+    .gr-2 {
+      background: linear-gradient(170deg, #B4EC51 0%, #429321 100%); 
+    }
 
-.gr-3 {
-  background: linear-gradient(170deg, #C86DD7 0%, #3023AE 100%);
-}
+     .gr-3 {
+  background: linear-gradient(170deg, #C86DD7 0%, #3023AE 100%); 
+} 
 
-* {
-  transition: 0.5s;
-}
+    * {
+      transition: 0.5s;
+    }
 
-.h-100 {
-  height: 90vh !important;
-}
+    .h-100 {
+      height: 90vh !important;
+    }
 
-.align-middle {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
+    .align-middle {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
 
-.column {
-  margin-top: 10rem;
-  padding-left: 3rem;
-}
-.column:hover {
-  padding-left: 0;
-}
-.column:hover .card .txt {
-  margin-left: 1rem;
-}
-.column:hover .card .txt h1, .column:hover .card .txt p {
-  color: white;
-  opacity: 1;
-}
-.column:hover a {
-  color: white;
-}
-.column:hover a:after {
-  width: 10%;
-}
+    .column {
+      margin-top: 10rem;
+      padding-left: 3rem;
+    }
 
-.card {
-  min-height: 170px;
-  margin: 0;
-  margin-top: 0px;
-  margin-bottom: 20px;
-  padding: 1.7rem 1.2rem;
-  border: none;
-  border-radius: 0;
-  color: black;
-  letter-spacing: 0.05rem;
-  font-family: "Oswald", sans-serif;
-  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
-}
-.card .txt {
-  margin-left: -3rem;
-  z-index: 1;
-}
-.card .txt h1 {
-  font-size: 1.5rem;
-  font-weight: 300;
-  text-transform: uppercase;
-}
-.card .txt p {
-  font-size: 0.7rem;
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 0rem;
-  margin-top: 33px;
-  opacity: 0;
-  color: white;
-}
-.card a {
-  z-index: 3;
-  font-size: 0.7rem;
-  color: black;
-  margin-left: 1rem;
-  position: relative;
-  bottom: -0.5rem;
-  text-transform: uppercase;
-}
-.card a:after {
-  content: "";
-  display: inline-block;
-  height: 0.5em;
-  width: 0;
-  margin-right: -100%;
-  margin-left: 10px;
-  border-top: 1px solid white;
-  transition: 0.5s;
-}
-.card .ico-card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.card i {
-  position: relative;
-  right: -50%;
-  top: 60%;
-  font-size: 12rem;
-  line-height: 0;
-  opacity: 0.2;
-  color: white;
-  z-index: 0;
-}
+    .column:hover {
+      padding-left: 0;
+    }
+
+    .column:hover .card .txt {
+      margin-left: 1rem;
+    }
+
+    .column:hover .card .txt h1,
+    .column:hover .card .txt p {
+      color: white;
+      opacity: 1;
+    }
+
+    .column:hover a {
+      color: white;
+    }
+
+    .column:hover a:after {
+      width: 10%;
+    }
+
+    .card {
+      min-height: 170px;
+      margin: 0;
+      margin-top: 0px;
+      margin-bottom: 20px;
+      padding: 1.7rem 1.2rem;
+      border: 2px solid black;
+      border-radius: 15px;
+      color: black;
+      letter-spacing: 0.05rem;
+      font-family: "Oswald", sans-serif;
+      box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    }
+
+    .card .txt {
+      margin-left: -3rem;
+      z-index: 1;
+    }
+
+    .card .txt h1 {
+      font-size: 1.5rem;
+      font-weight: 300;
+      text-transform: uppercase;
+    }
+
+    .card .txt p {
+      font-size: 0.7rem;
+      font-family: "Open Sans", sans-serif;
+      letter-spacing: 0rem;
+      margin-top: 33px;
+      opacity: 0;
+      color: white;
+    }
+
+    .card a {
+      z-index: 3;
+      font-size: 0.7rem;
+      color: black;
+      margin-left: 1rem;
+      position: relative;
+      bottom: -0.5rem;
+      text-transform: uppercase;
+    }
+
+    .card a:after {
+      content: "";
+      display: inline-block;
+      height: 0.5em;
+      width: 0;
+      margin-right: -100%;
+      margin-left: 10px;
+      border-top: 1px solid white;
+      transition: 0.5s;
+    }
+
+    .card .ico-card {
+      position: absolute;
+
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .card i {
+      position: relative;
+      right: -50%;
+      top: 60%;
+      font-size: 12rem;
+      line-height: 0;
+      opacity: 0.2;
+      color: white;
+      z-index: 0;
+    }
   </style>
 </head>
 
 <body>
 
 
-  <p style=" margin-top: 20px; text-decoration: underline; font-size: 40px; font-weight: bold; color: aliceblue; text-align: center;">
+  <p
+    style=" margin-top: 20px; text-decoration: underline; font-size: 50px; font-weight: bold; color: aliceblue; text-align: center;font-family:'Great Vibes';">
     Enrolled Courses</p>
 
 
- 
-    <div class="container h-100" style="margin-top: 70px;">
-        <div class="row " style="margin-top: 0px; margin-bottom: 50px;">
-          {% for x in course %}
-          <div class="col-md-6 col-lg-4 column" style="margin-top: 80px; padding-top: 30px;">
-            <div class="card gr-1">
-              <div class="txt">
-            
-            <h1 style="font-weight: bold; color: white; text-shadow: 0 0 7px #000000;">{{ x.title }}</h1>
-            <p style="font-size: 20px;">{{ x.description }}</p>
+
+  <div class="container h-100" style="margin-top: 70px;">
+    <div class="row " style="margin-top: 0px; margin-bottom: 50px;">
+      {% for x in course %}
+      <div class="col-md-6 col-lg-4 column" style="margin-top: 80px; padding-top: 30px;">
+        <div class="card gr-1">
+          <div class="txt">
+
+            <h1 style="font-weight: bold; color: white; text-shadow: 0 0 7px #000000;padding-left: 10px;padding-left: 10px;">{{ x.title }}</h1>
+            <p style="font-size: 20px;padding-left: 15px;">{{ x.description }}</p>
           </div>
-          
-          <br><a style="margin-left: 3px; font-weight: bold; font-size: 20px; color: white; " href="resources/{{ x.id }}">Resources</a>
+
+          <br><a style="margin-left: 3px; font-weight: bold; font-size: 20px; color: white;padding-left: 15px; "
+            href="resources/{{ x.id }}">Resources</a>
           <div class="ico-card">
-          <i class="fa fa-rebel"></i>
-        </div>
+            <i class="fa fa-rebel"></i>
+          </div>
         </div>
       </div>
       {% endfor %}
-      
-      
+
+
     </div>
   </div>
 
