--- a/plms/learner/templates/newindex.html
+++ b/plms/learner/templates/newindex.html
@@ -11343,8 +11343,14 @@ body {
   font-size: 0.85rem;
   font-weight: 700;
   text-transform: uppercase;
-  border: none;
+  background: transparent;
+  color: coral;
+  border: 2px solid coral;
   border-radius: 10rem;
+}
+.btn-xl:hover{
+  color:white;
+  transition: 0.8s;
 }
 
 hr.divider {
