--- a/plms/learner/templates/registert.html
+++ b/plms/learner/templates/registert.html
@@ -5,29 +5,59 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
+<head>
+  <style>
+    *{
+      background: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp');
+      background-size: cover;
+      box-sizing: border-box;
+    }
+    .row_justify-content-center{
+      position: absolute;
+      top:50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      width: 40%;
+      background: transparent;
+      border: 2px solid black;
+      border-radius: 20px;
+      padding: 25px;
+
+    }
+    button{
+      text-decoration: none;
+      outline: none;
+      border:2px solid black;
+      background:transparent;
+      text-align: center;
+      cursor: pointer;
+      margin-left: 300px;
+    }
+
+  </style>
+</head>
 
 
 
 
 
-
-<section class="vh-100" style="background-color: #eee;">
+<section class="vh-100" >
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
           <div class="card text-black" style="border-radius: 25px;">
             <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+              <div class="row_justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1" >
   
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Teacher Sign up</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4" style="margin-left:280px; font-weight: bold;font-size: 25px;background:transparent;">Teacher Sign up</p>
   
                   <form class="mx-1 mx-md-4" method ="POST" action="/registert">
                     {% csrf_token %}
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
+                      <div class="form-outline flex-fill mb-0" >
                     
                           
 
@@ -73,7 +103,7 @@
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="submit"  class="btn btn-primary btn-lg">Register</button>
+                      <button type="submit"  class="btn btn-primary btn-lg" >Register</button>
                     </div>
   
                   </form>
@@ -81,8 +111,7 @@
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
   
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                    class="img-fluid" alt="Sample image">
+                 
   
                 </div>
               </div>
