made UI improvements in home page and signin page

--- a/plms/learner/templates/log.html
+++ b/plms/learner/templates/log.html
@@ -10,103 +10,111 @@
 
 
 <style>
-    .gradient-custom {
-/* fallback for old browsers */
-background: #6a11cb;
-
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-}
-/* The alert message box */
-.alert {
-  position: absolute;
-  top: 100px;
-  padding: 10px 10px 0px 10px;
-  background-color: #dddddd; /* Red */
-  color: rgb(0, 0, 0);
-  margin: -39px 90vh;
-  width: max-content;
-  height: 6%;
-  align-items: center;
-  justify-content: center;
+  /* The alert message box */
+  .alert {
+    position: absolute;
+    top: 100px;
+    padding: 10px 10px 0px 10px;
+    background-color: #dddddd;
+    /* Red */
+    color: rgb(0, 0, 0);
+    margin: -39px 90vh;
+    width: max-content;
+    height: 6%;
+    align-items: center;
+    justify-content: center;
   }
 
-/* The close button */
-.closebtn {
-margin-left: 15px;
-color: rgb(0, 0, 0);
-font-weight: bold;
-float: right;
-font-size: 22px;
-line-height: 20px;
-cursor: pointer;
-transition: 0.3s;
-}
+  /* The close button */
+  .closebtn {
+    margin-left: 15px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
 
+  a {
+    text-decoration: none;
+  }
+  #myVideo {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+    /* Add some content at the bottom of the video/page */
+    .content {
+      position: fixed;
+      bottom: 0;
+      background: rgba(52, 241, 255, 0.251);
+      color: #f1f1f1;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+    }
+  
+  .card{
+    background:linear-gradient(to left top,#7bdca4 0%, #10a2e7 100%);
+  }
 </style>
-
+<video autoplay muted loop id="myVideo">
+  <source src="/media/media/keyboard.mp4" type="video/mp4">
+</video>
 {%for msg in messages%}
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
   {{msg}}
 </div>
 {%endfor%}
-
-
-
-
-
-<section class="vh-100 gradient-custom">
+<div class="content">
+  <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-  
-              <div class="mb-md-5 mt-md-4 pb-5">
+          <div class="card padding-left-5" style="border-radius: 1rem;">
+            <div class="card-body text-center">
+
+              <div class="mb-md-5 mt-md-4">
                 <h2 class="fw-bold mb-2 text-uppercase">Learning Management System</h2><br>
-                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your username and password!</p>
+                <h2 class="fw-bold mb-2 ">Login</h2>
+                <br><br>
                 <form method="post" class="form-sign" action="/login">
-                    {% csrf_token %}
-                <div class="form-outline form-white mb-4">
-                  <input type="text" id="typeEmailX" name="loginusername" class="form-control form-control-lg"  />
-                  <label class="form-label" for="typeEmailX">Username</label>
-                  
-                </div>
-  
-                <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" name="loginpassword"  class="form-control form-control-lg" />
-                  <label class="form-label" for="typePasswordX">Password</label>
-                  <!-- <input type="password" name="loginpassword" class="form-control" id="floatingPassword" placeholder="Password"/> -->
-                </div>
-                <h2>&nbsp;</h2>
-  
-                <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
-  
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-  
-                <!-- <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                  <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                </div> -->
-  </form>
+                  {% csrf_token %}
+                  <div class="form-outline form-white mb-4">
+                    <input type="text" id="typeEmailX" name="loginusername" class="form-control form-control-lg"
+                      placeholder="Uername">
+                    <!-- <label class="form-label" for="typeEmailX">Username</label> -->
+
+                  </div>
+
+                  <div class="form-outline form-white mb-4">
+                    <input type="password" id="typePasswordX" name="loginpassword" class="form-control form-control-lg"
+                      placeholder="Password">
+
+                  </div>
+<br><br>
+                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                  <br><br><br>
+                  <div class="bottom">
+                    <p class="text-black">Don't have an account? <br>
+                      <a href="{% url 'registers' %}" class="text-black-50 fw-bold">Sign Up As Student</a> |
+                      <a href="{% url 'registert' %}" class="text-black-50 fw-bold">Sign Up As Teacher</a>
+                    </p>
+                  </div>
+                </form>
               </div>
-  
-              <div>
-                <p class="mb-0">Don't have an account? <br><br><a href="{% url 'registers' %}"class="text-white-50 fw-bold">Sign Up As Student</a><br>
-                </p><br>
-                <p class="mb-0"> <a href="{% url 'registert' %}"class="text-white-50 fw-bold">Sign Up As Teacher</a>
-                </p>
-              </div>
-  
+
+
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+</div>
